--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -116,8 +116,8 @@
     \begin{proof}
         Sabemos que $p\circ \alpha$ es un lazo basado en $b_0$ por lo que $[p\circ \alpha]\in \pi_1(B,b_0)$. Además,
         \begin{align*}
-            \pi_1(R,r_2) &\overset{isom.}{\to} \pi_1(R,r_1)\\
-            [\beta] &\mapsto [\alpha \ast \beta \ast \tilde{\alpha}]
+            \pi_1(R,r_2) &\overset{isom.}{\longrightarrow} \pi_1(R,r_1)\\
+            [\beta] &\longmapsto [\alpha \ast \beta \ast \tilde{\alpha}]
         \end{align*}
         Tenemos por tanto que 
         \begin{gather*}
@@ -293,10 +293,8 @@
 
 \begin{ejemplo}
     Consideramos la aplicación recubridora
-    \begin{align*}
-        p: \bb{S}^1 \times \bb{R} &\to \bb{S}^1 \times \bb{R}\\
-        (x,y,z) & \mapsto (x^2 -y^2, 2xy,z)
-    \end{align*}
+    \Func{p}{\bb{S}^1 \times \bb{R}}{\bb{S}^1 \times \bb{R}}
+         {(x,y,z)}{(x^2 -y^2, 2xy,z)}
     y las aplicaciones $f_1,f_2 : \bb{S}^1 \to \bb{S}^1 \times \bb{R}$ dadas por 
     \begin{gather*}
         f_1(x,y) = (x,y,x)\\
@@ -610,9 +608,6 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
                 p_{1*}(\pi_1(R_1,r_1)) = p_{2*}(\pi_1(R_2,r_2))
             \end{gather*}
         \end{enumerate}
-
-        
-        
     \end{proof}
 \end{coro}
 
@@ -737,15 +732,11 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
         También podemos considerar el recubridor $(\bb{S}^1, p_1=Id_{\bb{S}^1})$ cuyo subgrupo asociado es $H_1 = \pi_1(\bb{S}^1, (1,0))$.\\
 
         Ahora nos planteamos de nuevo que $\bb{S}^1$ es recubridor de sí mismo pero que hay más formas de recubrirse, es decir, podemos encontrar funciones recubridoras $p_k$ con $k\in \bb{Z}^+$ de forma que todas recubran a la circunferencia pero ``enrollandola más'', es decir, llevando cada vuelta de $R=\bb{S}^1$ en $k$ vueltas de $B=\bb{S}^1$. Definimos así la aplicación $p_k$ para $k\geq 2$ (el caso $k=1$ es la identidad que ya se ha estudiado) dada por 
-        \begin{align*}
-            p_k : \bb{S}^1 &\to \bb{S}^1\\
-            (\cos(\theta), \sen(\theta)) & \mapsto (\cos(k\theta), \sen(k\theta))
-        \end{align*}
+        \Func{p_k}{\bb{S}^1}{\bb{S}^1}
+             {(\cos(\theta), \sen(\theta))}{(\cos(k\theta), \sen(k\theta))}
         Además tendríamos que 
-        \begin{align*}
-            p_{k*}: \pi_1(\bb{S}^1, (1,0)) &\to \pi_1(\bb{S}^1, (1,0))\\
-            [\alpha] & \mapsto [\alpha]^k 
-        \end{align*}
+        \Func{ p_{k*}}{\pi_1(\bb{S}^1, (1,0))}{\pi_1(\bb{S}^1, (1,0))}
+             {[\alpha]}{[\alpha]^k}
         Llegando a que 
         \begin{gather*}
             p_{k*}(\pi_1(\bb{S}^1, (1,0))) = H_k = \{[\alpha]^{kn} : n\in \bb{Z}\}
@@ -766,17 +757,13 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
             H_0 \cong \{0\}
         \end{gather*}
         y además sabemos que $(\bb{R}^2, p_0)$ es recubridor del cilindro con
-        \begin{align*}
-            p_0 : \bb{R}^2 &\to \bb{S}^1\times \bb{R}\\
-            (x,y) & \mapsto (\cos(2\pi x), \sen(2\pi x), y)
-        \end{align*}
+        \Func{p_0}{\bb{R}^2}{\bb{S}^1\times \bb{R}}
+             {(x,y)}{(\cos(2\pi x), \sen(2\pi x), y)}
         asociado a $H_0=\{[\veps_{(1,0,0)}]\}$.\\
 
         Buscamos ahora los recubridores cuyo subgrupo asociado es $H_k$.  Con la misma idea que en el ejemplo anterior definimos la función $p_k$ para $k\in \bb{Z}^+$ dada por 
-        \begin{align*}
-            p_k : \bb{S}^1 \times \bb{R} &\to \bb{S}^1 \times \bb{R}\\
-            (\cos(\theta), \sen(\theta), y) &\mapsto (\cos(k\theta), \sen(k\theta), y)
-        \end{align*}
+        \Func{p_k}{\bb{S}^1 \times \bb{R}}{\bb{S}^1 \times \bb{R}}
+             {(\cos(\theta), \sen(\theta), y)}{(\cos(k\theta), \sen(k\theta), y)}
         Al igual que en el ejemplo anterior tenemos que 
         \begin{gather*}
             p_{k*}([\alpha]) = [\alpha]^k\\
@@ -795,10 +782,8 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
         con generadores $[\alpha]$ y $[\beta]$.\\
 
         Consideramos el recubridor $(\bb{R}^2, p_0\times p_0)$ con 
-        \begin{align*}
-            p_0\times p_0 : \bb{R}^2 &\to \bb{S}^1 \times \bb{S}^1\\
-            (x,y) & \mapsto (cos(2\pi x), \sen(2\pi x), \cos(2\pi y), \sen(2\pi y))
-        \end{align*}
+        \Func{p_0\times p_0}{\bb{R}^2}{\bb{S}^1 \times \bb{S}^1}
+             {(x,y)}{(cos(2\pi x), \sen(2\pi x), \cos(2\pi y), \sen(2\pi y))}
         Como $\pi_1(\bb{R}^2, (0,0)) = [\veps_{(0,0)}]$ tenemos que 
         \begin{gather*}
             (p_0\times p_0)_*(\pi_1(\bb{R}^2, (0,0))) = \{[\veps_{(1,0,1,0)}]\}
@@ -806,10 +791,8 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
         por lo que $(\bb{R}^2, p_0\times p_0)$ es el recubridor asociado al subgrupo trivial de $\pi_1(\bb{S}^1\times \bb{S}^1, (1,0,1,0))$.\\
 
         Consideramos ahora el cilindro como recubridor y definimos la aplicación recubridora
-        \begin{align*}
-            p_k\times p_0 : \bb{S}^1\times \bb{R} &\to \bb{S}^1 \times \bb{S}^1\\
-            (\cos(\theta), \sen(\theta), y) & \mapsto (cos(k\theta), \sen(k\theta), \cos(2\pi y), \sen(2\pi y))
-        \end{align*}
+        \Func{p_k\times p_0}{\bb{S}^1\times \bb{R}}{\bb{S}^1 \times \bb{S}^1}
+             {(\cos(\theta), \sen(\theta), y)}{(cos(k\theta), \sen(k\theta), \cos(2\pi y), \sen(2\pi y))}
         que para cada $k\in \bb{Z}^+$ ``enrolla'' el cilindro $k$ veces. 
         En este caso tendríamos que 
         \begin{gather*}
@@ -829,19 +812,15 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
             (p_k\times p_0)_*(\pi_1(\bb{S}^1 \times \bb{R}, (1,0,0))) = \{[\alpha]^{nk} : n\in \bb{Z}\} \cong k\bb{Z}\times \{0\} \leq \bb{Z} \times \bb{Z}
         \end{gather*}
         Análogamente si consideramos 
-        \begin{align*}
-            p_0\times p_k : \bb{R}\times \bb{S}^1 &\to \bb{S}^1 \times \bb{S}^1\\
-            (x,  \cos(\theta), \sen(\theta)) & \mapsto (\cos(2\pi x), \sen(2\pi x), cos(k\theta), \sen(k\theta))
-        \end{align*}
+        \Func{p_0\times p_k}{\bb{R}\times \bb{S}^1}{\bb{S}^1 \times \bb{S}^1}
+             {(x,  \cos(\theta), \sen(\theta))}{(\cos(2\pi x), \sen(2\pi x), cos(k\theta), \sen(k\theta))}
         tendríamos el siguiente recubridor
         \begin{gather*}
             (\bb{R}\times \bb{S}^1, p_0\times p_k) \text{ asociado a } \{0\}\times k\bb{Z} \leq \bb{Z}\times \bb{Z}
         \end{gather*}
         Consideramos ahora el toro como recubridor de sí mismo y definimos
-        \begin{align*}
-            p_k\times p_l : \bb{S}^1\times \bb{S}^1 &\to \bb{S}^1 \times \bb{S}^1\\
-            (\cos(\theta), \sen(\theta), \cos(\varphi), \sen(\varphi)) & \mapsto (cos(k\theta), \sen(k\theta), \cos(l \varphi), \sen(l\varphi))
-        \end{align*}
+        \Func{p_k\times p_l}{\bb{S}^1\times \bb{S}^1}{\bb{S}^1 \times \bb{S}^1}
+             {(\cos(\theta), \sen(\theta), \cos(\varphi), \sen(\varphi))}{(cos(k\theta), \sen(k\theta), \cos(l \varphi), \sen(l\varphi))}
         Si estudiamos la imagen de los generadores tenemos 
         \begin{gather*}
             (p_k\times p_l)_*([\alpha]) = [\alpha]^k\\
@@ -851,21 +830,22 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
         \begin{gather*}
             \{[\alpha]^{kn_1}\ast [\beta]^{ln_2} : n_1,n_2\in \bb{Z}\}
         \end{gather*}
-        En este punto nos damos cuenta de que aún no hemos estudiado todos los subgrupos de $\bb{Z}\times \bb{Z}$. Si consideramos 2 puntos de $\bb{Z}$ podemos generar un subgrupo a partir de ellos, por ejemplo, para $(1,3), (2,4)\in \bb{Z}\times \bb{Z}$ podemos construir $\{a(1,3)+b(2,4) : a,b\in \bb{Z}\}$ y es un subgrupo de $\bb{Z}\times \bb{Z}$. Esto también ocurre con un solo generador. Pensamos ahora entonces en la siguiente aplicación
-
+        En este punto nos damos cuenta de que aún no hemos estudiado todos los subgrupos de $\bb{Z}\times \bb{Z}$. Si consideramos 2 puntos de $\bb{Z}$ podemos generar un subgrupo a partir de ellos, por ejemplo, para $(1,3), (2,4)\in \bb{Z}\times \bb{Z}$ podemos construir $\{a(1,3)+b(2,4) : a,b\in \bb{Z}\}$ y es un subgrupo de $\bb{Z}\times \bb{Z}$. Esto también ocurre con un solo generador. Es decir, tenemos que los subgrupos de $\bb{Z}\times \bb{Z}$ que nos queda por considerar son de la forma
+        \begin{gather*}
+            \{n(a,b) : n\in \bb{Z}\} \text{ para cada } (a,b)\in \bb{Z}\times \bb{Z}\\
+            \{n_1(a,b) + n_2(c,d) : n_1,n_2\in \bb{Z}\} \text{ para cada } (a,b), (c,d)\in \bb{Z}\times \bb{Z}
+        \end{gather*}
+        Pensamos ahora entonces en la siguiente aplicación
         \Func{p'}{\bb{S}^1\times \bb{R}}{\bb{S}^1\times \bb{S}^1}
         {(cos(\theta), \sen(\theta), y)}{(\cos(\theta), \sen(\theta), \cos(\theta+y), \sen(\theta+y))}
-
-        Nos planteamos ahora quién sería $p'_*([\gamma])$. Aplicamos $p'$ en un generador y tenemos
+        y nos planteamos quién sería $p'_*([\gamma])$. Aplicamos $p'$ en un generador y tenemos
         \begin{gather*}
             p'(\gamma(t)) = p(\cos(2\pi t), \sen(2\pi t), 0) = (\cos(2\pi t), \sen(2\pi t), \cos(2\pi t), \sen(2\pi t))
         \end{gather*}
         Intuitivamente podemos llegar a ver que $p'_*([\gamma]) = [\alpha] \ast [\beta]$.
-        Esto se ha hecho para el generador $(1,1)$ pero para cualquier generador $(a,b)\in \bb{Z}\times \bb{Z}$ se puede construir una aplicación $p'_{(a,b)}$ para cada $(a,b)\in \bb{Z}\times \bb{Z}$ de la siguiente forma:
-        
+        Esto se ha hecho considerando de fondo el generador $(1,1)$. Buscamos generalizar esta nueva aplicación recubridora para cualquier generador $(a,b)\in \bb{Z}\times \bb{Z}$. Se puede construir una aplicación $p'_{(a,b)}$ para cada $(a,b)\in \bb{Z}\times \bb{Z}$ de la siguiente forma:
         \Func{p'_{(a,b)}}{\bb{S}^1 \times \bb{R}}{\bb{S}^1\times \bb{S}^1}
         {(cos(\theta), \sen(\theta), y)}{(\cos(a\theta), \sen(a\theta), \cos(b\theta+y), \sen(b\theta+y))}
-
         Aplicando $p'_{(a,b)}$ en el generador tenemos
         \begin{gather*}
             p'_{(a,b)}(\gamma(t)) = p'(\cos(2\pi t), \sen(2\pi t), 0) = (\cos(2a\pi t), \sen(2a\pi t), \cos(2b\pi t), \sen(2b\pi t))
@@ -876,7 +856,7 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
             (p'_{(a,b)})_*([\gamma]) = [\alpha]^a \ast [\beta]^b
         \end{gather*}
 
-        Por tanto tenemos que $(\bb{S}^1 \times \bb{R}, p'_{(a,b)})$ es recubridor del toro con subgrupo asociado $\{n(a,b) : n\in \bb{Z}\}$.\\
+        Por tanto tenemos que $(\bb{S}^1 \times \bb{R}, p'_{(a,b)})$ es recubridor del toro con subgrupo asociado $\{n(a,b) : n\in \bb{Z}\}$ para cada generador que tomemos $(a,b)\in \bb{Z}$.\\
 
         De hecho, si tomamos un par de generadores $(a,b), (c,d)\in \bb{Z}\times \bb{Z}$ podemos definir la aplicación $p'_{(a,b)}\times p'_{(c,d)}: \bb{S}^1 \times \bb{S}^1 \to \bb{S}^1 \times \bb{S}^1$ dada por 
         \begin{gather*}
@@ -897,7 +877,7 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
             (p'_{(a,b)}\times p'_{(c,d)})_*([\alpha]) = [\alpha]^a \ast [\beta]^b\\
             (p'_{(a,b)}\times p'_{(c,d)})_*([\beta]) = [\alpha]^c \ast [\beta]^d
         \end{gather*}
-        y tenemos que $(\bb{S}^1 \times \bb{S}^1, p'_{(a,b)}\times p'_{(c,d)})$ es recubridor del toro asociado al subgrupo $\{n_1(a,b) + n_2(c,d) : n_1,n_2\in \bb{Z}\}$.\\
+        y tenemos que $(\bb{S}^1 \times \bb{S}^1, p'_{(a,b)}\times p'_{(c,d)})$ es recubridor del toro asociado al subgrupo $\{n_1(a,b) + n_2(c,d) : n_1,n_2\in \bb{Z}\}$ para cada par de generadores $(a,b),(c,d)\in \bb{Z}\times \bb{Z}$.\\
 
         Resumiendo, tenemos que todos los recubridores del toro $\bb{S}^1\times \bb{S}^1$ son 
         \begin{gather*}
