--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1333,12 +1333,22 @@
         \begin{gather*}
             [\hat{\alpha}] = [\veps_{r_0}] \ast [\hat{\beta}] = [\hat{\beta}]
         \end{gather*}
-        Usando $p_*$ tenemos que
+        % Usando $p_*$ tenemos que
+        % \begin{gather*}
+        %     p_*([\hat{\alpha}]) = [p\circ \hat{\alpha}] = [\alpha]\\
+        %     p_*([\hat{\beta}]) = [p\circ \hat{\beta}] = [\beta]
+        % \end{gather*}
+        % y como $p_*([\hat{\alpha}]) = p_*([\hat{\beta}])$ llegamos a que $[\alpha] = [\beta]$ como queríamos demostrar.
+        Como coinciden los elementos del grupo fundamental tendremos que son homotópicos por arcos por lo que existe una homotopía por arcos $H$ entre $\hat{\alpha}$ y $\hat{\beta}$, es decir, una aplicación $H:R\times [0,1] \to R$ tal que 
         \begin{gather*}
-            p_*([\hat{\alpha}]) = [p\circ \hat{\alpha}] = [\alpha]\\
-            p_*([\hat{\beta}]) = [p\circ \hat{\beta}] = [\beta]
+            H(t,0) = \hat{\alpha}(t) \ \ \ \text{ y } \ \ \ H(t, 1) = \hat{\beta}(t)
         \end{gather*}
-        y como $p_*([\hat{\alpha}]) = p_*([\hat{\beta}])$ llegamos a que $[\alpha] = [\beta]$ como queríamos demostrar.
+        Si consideramos ahora su composición con la aplicación recubridora, $p\circ H$, tendremos que es una homotopía entre $\alpha$ y $\beta$ ya que tendríamos $p\circ H : R \times [0,1] \to B$ que verifica
+        \begin{gather*}
+            (p\circ H)(t,0) = p(H(t,0)) = p(\hat{\alpha}(t)) = \alpha(t)\\
+            (p\circ H)(t,1) = p(H(t,1)) = p(\hat{\beta}(t)) = \beta(t)\\
+        \end{gather*}
+        por lo que podemos concluir que $[\alpha] = [\beta]$.
     \end{proof}
 \end{teo}
 
@@ -1347,7 +1357,7 @@
 \begin{definicion}
     Dado un lazo $\alpha:[0,1]\to \bb{S}^1 \subseteq \bb{R}^2$ basado en $(1,0)$, definimos el grado de $\alpha$ como el único número entero $\hat{\alpha}(1)$ dado por el levantamiento $\hat{\alpha}$ de $\alpha$ mediante la aplicación recubridora
     \begin{gather*}
-        p(x) = (\cos(2\pi x), \sen(2\pi x))\ \ \ \ , \text{con }\hat{\alpha}(0) \neq 0
+        p(x) = (\cos(2\pi x), \sen(2\pi x))\ \ \ \ , \text{con }\hat{\alpha}(0) = 0
     \end{gather*}
     Notaremos al grado de $\alpha$ como $\deg(\alpha)$
 \end{definicion}
@@ -2208,7 +2218,7 @@ Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya
 \end{coro}
 
 \begin{coro}
-    El grupo fundamental de $\bb{R}P^n$ $\bb{R}\cc{P}^n$ es isomorfo a $\bb{Z}^2$ para $n\geq 2$.
+    El grupo fundamental de $\bb{R}\bb{P}^n$ es isomorfo a $\bb{Z}_2$ para $n\geq 2$.
 
     \begin{proof}\
         \begin{figure}[H]
@@ -2279,7 +2289,7 @@ Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya
         \begin{gather*}
             \varphi: \pi_1(\bb{R}P^n, [a_0]) \to p^{-1}([a_0]) = \{a_0,-a_0\}
         \end{gather*}
-        es biyectiva (ya que $\bb{S}^1$ es simplemente conexo). Entonces $\pi_1(\bb{R}P^n, [a_0])$ solo tiene dos elementos, luego $\pi_1(\bb{R}P^n, [a_0]) \cong \bb{Z}^2$.
+        es biyectiva (ya que $\bb{S}^1$ es simplemente conexo). Entonces $\pi_1(\bb{R}P^n, [a_0])$ solo tiene dos elementos, luego $\pi_1(\bb{R}P^n, [a_0]) \cong \bb{Z}_2$.
     \end{proof}
 \end{coro}
 
