--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
@@ -166,7 +166,7 @@
     \begin{gather*}
         Y=\bigcup\limits_{n\in \bb{N}\cup \{0\}}X_n
     \end{gather*}
-    tenemos que $Y$ es es conexo porque es unión de los $X_n$ que son todos conexos y que intersecan con $X_0$. Entonces, como $Y\subset X \subset \overline{Y}$ tenemos que $X$ es conexo. Veamos sin embargo que $X$ no es arcoconexo.\\
+    tenemos que $Y$ es conexo porque es unión de los $X_n$ que son todos conexos y que intersecan con $X_0$. Entonces, como $Y\subset X \subset \overline{Y}$ tenemos que $X$ es conexo. Veamos sin embargo que $X$ no es arcoconexo.\\
 
     Para ello vamos a demostrar que si $\alpha:[0,1]\to X$ tal que $\alpha$ es continua con $\alpha(0)=(0,0)$, entonces $\alpha(t)=(0,0)$ para todo $t\in [0,1]$.\\
 
@@ -191,7 +191,7 @@
 \begin{teo}
     La imagen mediante una aplicación continua de un arcoconexo es un arcoconexo. En particular, ser arcoconexo es una propiedad topológica, es decir, se conserva por homeomorfismos.
     \begin{proof}
-        Sea $f$ el homeomorfismo y consideramos $x,y\in f(X)$, entonces existen $x_0,y_0\in X$ tal que $f(x_0)=x$ y $f(y_0) = y$. Por ser $X$ arcoconexo, entonces existe un arco $\alpha:[0,1]\to X$ con $\alpha(0)=x_0$ y $\alpha(1)=y_0$. Entonces tenemos que $f\circ \alpha: [0,1]\to f(X)$ es continua y $(f\circ \alpha)(0) = f(x_0) = x$ y $(f\circ\alpha)(1) = f(y_0) = y$ y tenemos demostrado el resultado que buscábamos.
+        Sea $f$ la aplicación continua y consideramos $x,y\in f(X)$ cualesquiera. Entonces existen $x_0,y_0\in X$ tal que $f(x_0)=x$ y $f(y_0) = y$. Por ser $X$ arcoconexo, entonces existe un arco $\alpha:[0,1]\to X$ con $\alpha(0)=x_0$ y $\alpha(1)=y_0$. Entonces tenemos que $f\circ \alpha: [0,1]\to f(X)$ es continua y $(f\circ \alpha)(0) = f(x_0) = x$ y $(f\circ\alpha)(1) = f(y_0) = y$ y tenemos por tanto que $(f\circ \alpha)$ es un arco que une $x$ con $y$. Tenemos entonces que para cualesquiera dos puntos $x,y\in f(X)$ existe un arco que los une luego $f(X)$ es arcoconexo.
     \end{proof}
 \end{teo}
 
