--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -136,10 +136,10 @@
             \item[(i)] Dado $\alpha \in \Omega(X;x,y)$ queremos ver que $\alpha$ es homotópica por arcos con $\alpha$. Para ello podemos definir la homotopía por arcos
             \Func{H}{[0,1]\times[0,1]}{X}{(s,t)}{\alpha(s)}
             Como $\alpha\in \Omega(X;x,y)$ tenemos que $\alpha(s)\in X$ para todo $s\in [0,1]$. Además se verifica que
-            \begin{align*}
-                H(s,t) = \alpha(s) \hspace{1cm} & H(s,0) = \alpha(s)=H(s,1)\\
-                H(0,t) = \alpha(0)=x \hspace{1cm} & H(1,t) = \alpha(1) = y
-            \end{align*}
+            \begin{gather*}
+                H(s,0) = \alpha(s)=H(s,1)\\
+                H(0,t) = \alpha(0)=x \hspace{1cm} H(1,t) = \alpha(1) = y
+            \end{gather*}
 
             \item[(ii)] Dados $\alpha, \beta\in \Omega(X;x,y)$ tales que existe $H:[0,1]\times [0,1]\to X$ continua tal que 
             \begin{align*}
@@ -593,7 +593,7 @@
         \end{gather*}
         es una aplicación continua dentro\footnote{aquí es donde usamos que es estrellado} de $X$ tal que 
         \begin{align*}
-            H(s,0) = \alpha(s) = \hspace{0.5cm} &\text{ y } \hspace{0.5cm} H(s,1) = x_0 = \veps_{x_0}(s) \ \ \ &\forall s\in [0,1]\\
+            H(s,0) = \alpha(s) \hspace{0.5cm} &\text{ y } \hspace{0.5cm} H(s,1) = x_0 = \veps_{x_0}(s) \ \ \ &\forall s\in [0,1]\\
             H(0,t) = x_0  \hspace{0.5cm} &\text{ y } \hspace{0.5cm} H(1,t) = x_0\ \ \ &\forall t \in [0,1]
         \end{align*}
     \end{proof}
@@ -832,11 +832,11 @@
         \begin{gather*}
             p':\left[k-\frac{1}{4}, k+\frac{1}{4}\right] \to \overline{O}
         \end{gather*}
-        es un homeomorfismo y por tanto
+        es un homeomorfismo y por tanto su restricción en el dominio
         \begin{gather*}
             p':\left(k-\frac{1}{4}, k+\frac{1}{4}\right) \to \overline{O}
         \end{gather*}
-        también lo es y como por la definición de $A_k$ tenemos lo que buscábamos. \\
+        también lo es y por la definición de $A_k$ tenemos lo que buscábamos. \\
 
         Si repetimos este razonamiento de forma análoga para los siguientes conjuntos:
         \begin{gather*}
@@ -1002,7 +1002,7 @@
          y su producto 
          \begin{align*}
             p\times p :\bb{R}\times \bb{R} & \to \bb{S}^1 \times \bb{S}^1\\
-            x & \mapsto (\cos(2\pi x), \sen(2\pi x), \cos(2\pi x), \sen(2\pi x))
+            (x,y) & \mapsto (\cos(2\pi x), \sen(2\pi x), \cos(2\pi y), \sen(2\pi y))
         \end{align*}
         que sería la aplicación recubridora. Intuitivamente podemos entenderlo de forma gráfica como \\
 
@@ -1137,7 +1137,7 @@
     \end{align*}
     Si elegimos
     \begin{align*}
-        \hat{\alpha} : [0,1] \to \bb{R}\\
+        \hat{\alpha} : [0,1] &\to \bb{R}\\
         s & \mapsto s
     \end{align*}
     es claro que $p\circ \hat{\alpha} = \alpha$. Otros posibles levantamientos de $\alpha$ son 
@@ -1190,7 +1190,7 @@
 \end{ejemplo}
 
 \begin{lema}
-    Sean $p:R\to B$ una aplicación recubridora, $r_0\in R$ y $b_0\in B$ tales que $p(r_0)=b_0$. Entonces dado un arco $\alpha:[0,1]\to B$ con $\alpha(0)=b_0$, existe un único arco $\hat{\alpha};[0,1]\to R$ tal que $\hat{\alpha}(0) = r_0$ y $\hat{\alpha}$ es un levantamiento de $\alpha$.
+    Sean $p:R\to B$ una aplicación recubridora, $r_0\in R$ y $b_0\in B$ tales que $p(r_0)=b_0$. Entonces dado un arco $\alpha:[0,1]\to B$ con $\alpha(0)=b_0$, existe un único arco $\hat{\alpha}:[0,1]\to R$ tal que $\hat{\alpha}(0) = r_0$ y $\hat{\alpha}$ es un levantamiento de $\alpha$.
 
     \begin{proof}
         Como $p$ es una aplicación recubridora, cada punto $b\in B$ tiene asociado un abierto $O_b$ regularmente recubierto que contiene a $b$. Como $\alpha([0,1])$ es compacto tenemos que existe un recubrimiento finito, es decir,
@@ -1343,11 +1343,11 @@
         %     p_*([\hat{\beta}]) = [p\circ \hat{\beta}] = [\beta]
         % \end{gather*}
         % y como $p_*([\hat{\alpha}]) = p_*([\hat{\beta}])$ llegamos a que $[\alpha] = [\beta]$ como queríamos demostrar.
-        Como coinciden los elementos del grupo fundamental tendremos que son homotópicos por arcos por lo que existe una homotopía por arcos $H$ entre $\hat{\alpha}$ y $\hat{\beta}$, es decir, una aplicación $H:R\times [0,1] \to R$ tal que 
+        Como coinciden los elementos del grupo fundamental tendremos que son homotópicos por arcos por lo que existe una homotopía por arcos $H$ entre $\hat{\alpha}$ y $\hat{\beta}$, es decir, una aplicación $H:[0,1]\times [0,1] \to R$ tal que 
         \begin{gather*}
             H(t,0) = \hat{\alpha}(t) \ \ \ \text{ y } \ \ \ H(t, 1) = \hat{\beta}(t)
         \end{gather*}
-        Si consideramos ahora su composición con la aplicación recubridora, $p\circ H$, tendremos que es una homotopía entre $\alpha$ y $\beta$ ya que tendríamos $p\circ H : R \times [0,1] \to B$ que verifica
+        Si consideramos ahora su composición con la aplicación recubridora, $p\circ H$, tendremos que es una homotopía entre $\alpha$ y $\beta$ ya que tendríamos $p\circ H : [0,1] \times [0,1] \to B$ que verifica
         \begin{gather*}
             (p\circ H)(t,0) = p(H(t,0)) = p(\hat{\alpha}(t)) = \alpha(t)\\
             (p\circ H)(t,1) = p(H(t,1)) = p(\hat{\beta}(t)) = \beta(t)\\
@@ -1411,7 +1411,7 @@
                 \end{array}
             \right\} = (\alpha \ast \beta)
         \end{align*}
-        por lo que $\widehat{\alpha\ast\beta}$ es un levantamiento de $\alpha \ast \beta$ con $\hat{\alpha \ast \beta}(0) = \widehat{\alpha}(0)$ por lo que por definición tenemos que 
+        por lo que $\widehat{\alpha\ast\beta}$ es un levantamiento de $\alpha \ast \beta$ con $\widehat{\alpha \ast \beta}(0) = \widehat{\alpha}(0)$ por lo que por definición tenemos que 
         \begin{gather*}
             \deg(\widehat{\alpha \ast \beta}) = \widehat{\alpha \ast \beta}(1) = \hat{\alpha}(1) + \hat{\beta}(1) = \deg(\alpha) + \deg(\beta)
         \end{gather*}
@@ -1437,16 +1437,16 @@
         \begin{gather*}
             [\alpha]_{\overline{\bb{D}}} = [\veps_{(1,0)}]
         \end{gather*}
-        ya que $\overline{\bb{D}}$ es simplemente conexo. Si exisitiese una $f$ continua, entonces tendríamos que
+        ya que $\overline{\bb{D}}$ es simplemente conexo. Si existiese una $f$ continua, entonces tendríamos que
         \begin{align*}
             f_*:\pi_1(\overline{\bb{D}}(1,0)) & \to \pi_1(\bb{S}^1, (1,0))\text{ es homeomorfismo}\\
             [\alpha]_{\overline{\bb{D}}} & \mapsto f_*([\alpha]_{\overline{\bb{D}}}) \overset{def}{=}[f\circ \alpha]_{\bb{S}^1} = [\alpha]_{\bb{S}^1}
         \end{align*}
         Pero $[\alpha]_{\overline{\bb{D}}} = [\veps_{(1,0)}]_{\overline{\bb{D}}}$ por lo que 
         \begin{gather*}
-            f_x([\alpha]_{\overline{\bb{D}}}) = f_*([\veps_{(1,0)}]_{\overline{\bb{D}}}) = [\veps_{(1,0)}]_{\bb{S}^1}
+            f_*([\alpha]_{\overline{\bb{D}}}) = f_*([\veps_{(1,0)}]_{\overline{\bb{D}}}) = [\veps_{(1,0)}]_{\bb{S}^1}
         \end{gather*}
-        pero como $f_x([\alpha]_{\overline{\bb{D}}}) = [\alpha]_{\bb{S}^1}$ llegamos a contradicción ya que $\deg(\alpha) = 1$ y $\deg(\veps_{(1,0)}) = 0$
+        pero como $f_*([\alpha]_{\overline{\bb{D}}}) = [\alpha]_{\bb{S}^1}$ llegamos a contradicción ya que $\deg(\alpha) = 1$ y $\deg(\veps_{(1,0)}) = 0$
     \end{proof}
 \end{prop}
 
@@ -1467,7 +1467,7 @@
         \end{gather*}
         Por lo que podemos despejar $\lambda_x$ y nos queda
         \begin{gather*}
-            \lambda_x = \frac{-2\langle f(x), x-f(x) \rangle + \sqrt{4\langle f(x), x-f(x)\rangle^2 - 4(\langle f(x),f(x)-1\rangle)\langle x-f(x), x-f(x)\rangle}}{2\langle x-f(x), x-f(x) \rangle}
+            \lambda_x = \frac{-2\langle f(x), x-f(x) \rangle + \sqrt{4\langle f(x), x-f(x)\rangle^2 - 4\langle f(x),f(x)-1\rangle\langle x-f(x), x-f(x)\rangle}}{2\langle x-f(x), x-f(x) \rangle}
         \end{gather*}
         Por lo que $g(x) = f(x) + \lambda_x(x-f(x))$ es continua y $|g(x)|=1$. Por tanto tenemos que si $x\in \bb{S}^1$, entonces $g(x)=x$ lo que contradice la proposición anterior.
     \end{proof}
@@ -1590,10 +1590,13 @@
 
     \begin{proof}
         Si $A$ es retracto de $X$, entonces por definición tenemos que  $\exists r :X \to A$ continua tal que $r(a)=a$ para cualquier $a\in A$.
-        \begin{align*}
-            A \overset{i}{\longrightarrow} X \overset{r}{\longrightarrow} A& \ \ \ ,r\circ i = Id_A\\
-            a \longmapsto a  \longmapsto a&
-        \end{align*}
+
+        \begin{gather*}
+            \xymatrixrowsep{0.5pc}\xymatrixcolsep{1.5pc}\xymatrix{
+                A \ar[r]^{i} & X \ar[r]^{r} & A & ,r\circ i = Id_A\\
+                a \ar@{|->}[r] & a \ar@{|->}[r] & a
+            }
+        \end{gather*}
 
         \begin{gather*}
             \xymatrix{
@@ -1624,7 +1627,7 @@
         \item[(i)] La inversa homotópica no tiene por qué ser única
         \item[(ii)] La composición de equivalencias homotópicas sigue siendo una equivalencia homotópica, de lo que se deduce que ser homotópicamente equivalente es una relación de equivalencia.
         \item[(iii)] Una equivalencia homotópica no tiene por qué ser ni inyectiva ni sobreyectiva. 
-        \item[(iv)] Todo heomorfismo es una equivalencia homotópica.
+        \item[(iv)] Todo homeomorfismo es una equivalencia homotópica.
     \end{enumerate}
 \end{observacion}
 
