--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1817,7 +1817,7 @@
 \end{teo}
 
 \begin{definicion}
-    Sean $X$ un espacio topológico y $A\subset X$. Decimos que $A$ es un \textbf{retracto de deformación} de $X$ si existe una retracción $r:X\to A$ que es homotópica a la identidad en $X$.\\
+    Sean $X$ un espacio topológico y $A\subset X$. Decimos que $A$ es un \textbf{retracto de deformación} de $X$ si existe una retracción $r:X\to A$ tal que $i\circ r$ sea homotópica a la identidad en $X$, donde $i: A \to X$ denota la inclusión.\\
 
     Esta definición se escribe simplemente como que existe $H:X\times[0,1]\to X$ homotopía tal que 
     \begin{gather*}
@@ -2060,7 +2060,7 @@
         Consideramos la homotopía:
         \begin{align*}
             H:Y\times [0,1] &\to Y\\
-            ((x,t),t) &\mapsto (1-t)(x,y)+y\left(x, \frac{1}{2}\right)
+            ((x,t),t) &\mapsto (1-t)(x,y)+t\left(x, \frac{1}{2}\right)
         \end{align*}
         que es continua. Se deja como ejercicio ver que $H$ está bien definida, es decir, que para cualesquiera 2 elementos relacionados tienen la misma imagen (bajo $R$). De esta forma se tiene
         \begin{gather*}
@@ -2542,7 +2542,7 @@ Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya
 \end{ejemplo}
 
 \begin{lema}
-    Sea $f:\bb{S}^1 \to \bb{S}^1$ una aplicación continua que conserva antípodas, es decir, $f(-x)=-x$ para todo $x\in \bb{S}^1$. Si consideramos el lazo
+    Sea $f:\bb{S}^1 \to \bb{S}^1$ una aplicación continua que conserva antípodas, es decir, $f(-x)=-f(x)$ para todo $x\in \bb{S}^1$. Si consideramos el lazo
     \begin{gather*}
         \alpha(s) = (\cos(2\pi s), \sen(2\pi s))
     \end{gather*}
@@ -3134,7 +3134,12 @@ De esta forma, $(F(a), \cdot)$ es isomorfo a $\bb{Z}$
 \end{coro}
 
 \begin{observacion}
-    De esta forma, de la propiedad anterior se deduce que de todo grupo $G$ se puede ver como un grupo libre sobre un subgrupo normal suyo.
+    % De esta forma, de la propiedad anterior se deduce que de todo grupo $G$ se puede ver como un grupo libre sobre un subgrupo normal suyo.
+    Podemos considerar $\rho = Id_G$ y aplicando el primer teorema de isomorfía sobre la $f$ que da la propiedad universal tenemos que 
+    \begin{gather*}
+        G \cong \frac{F(G)}{\ker(f)}
+    \end{gather*}
+    De esta forma se deduce que todo grupo $G$ puede verse como un grupo libre sobre un subgrupo normal suyo.
 \end{observacion}
 
 \begin{definicion}
