--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -3423,9 +3423,7 @@ Si consideramos ahora $g=[\beta]_{U\cap V}$ tendríamos que
         \begin{gather*}
             \pi_1(X,x_0) \overset{isom.}{\cong} \langle [\beta]_U, [\gamma]_U, [\alpha]_V, [\gamma]_V; i_{1*}([\gamma]_{U\cap V})^{-1} i_{2*}([\gamma]_{U\cap V}) \rangle
         \end{gather*}
-        donde $i_{1*}([\gamma]_{U\cap V})^{-1} i_{2*}([\gamma]_{U\cap V})= [\gamma]_U^{-1}[\gamma]_V$ será el elemento neutro, luego $[\gamma]_U = [\gamma]_V$ y tendremos solo 3 generadores.\\
-
-        Por tanto podemos concluir que 
+        donde $i_{1*}([\gamma]_{U\cap V})^{-1} i_{2*}([\gamma]_{U\cap V})= [\gamma]_U^{-1}[\gamma]_V$ será el elemento neutro, luego $[\gamma]_U = [\gamma]_V$ y tendremos solo 3 generadores. Por tanto podemos concluir (con algo de intuición) que 
         \begin{gather*}
             x_1(X,x_0) \cong \bb{Z} \ast \bb{Z} \ast \bb{Z}
         \end{gather*}
