--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -891,3 +891,110 @@ Vamos a tratar en lo que queda de tema de clasificar los espacios recubridores d
         Como $\bb{Z}\times \bb{Z}$ no tiene más subgrupos estos serán todos los recubridores del toro.
     \end{enumerate}
 \end{ejemplo}
+
+Hasta ahora lo que hemos visto es que para estudiar el número de recubridores de un espacio $B$ podemos elegir un punto $b_0\in B$ y pasar a estudiar $\pi_1(B,b_0)$ y estudiando sus subgrupos $H>\pi_1(B,b_0)$ podíamos afirmar que como mucho había un recubridor por cada uno de ellos (o sus conjugados). Por tanto cuanto más ``grande'' sea el grupo fundamental, más recubridores podremos encontrar a priori. \\
+
+\begin{prop}
+    Sea $\phi$ un homomorfismo de recubridores desde $(R_1,p_1)$ en $(R_2,p_2)$. Entonces $\phi:R_1 \to R_2$ es una aplicación recubridora.
+    \begin{gather*}
+        \xymatrix{
+            R_1 \ar[rr]^{\phi} \ar[dr]_{p_1} && R_2 \ar[dl]^{p_2}\\
+            & B
+        }
+    \end{gather*}
+    \begin{proof}
+        Sabemos que $\phi$ es continua porque es homomorfismo. Veamos que $\phi$ es sobreyectiva (no es elemental). Consideramos un elemento cualquiera $r_2\in R_2$ y queremos ver si existe un $r_1\in R_1$ tal que $\phi(r_1)=r_2$. \\
+
+        Tomamos $r_0\in R_1$ cualquiera y elegimos un arco $\alpha$ en $R_2$ que una $\phi(r_0)$ con $r_2$, es decir
+        \begin{gather*}
+            \alpha\in \Omega(R_2; \phi(r_0), r_2)
+        \end{gather*}
+        Si proyectamos tendremos que $p_2\circ \alpha$ es un arco en el espacio topológico base $B$ que une $p_2(\phi(r_2))$ con $p_2(r_2)$, es decir
+        \begin{gather*}
+            (p_2\circ \alpha) \in \Omega(B; p_2(\phi(r_0)), p_2(r_2))
+        \end{gather*}
+        Sabiendo que el diagrama de la proposición es conmutativo tenemos que $p_2(\phi(r_0)) = p_1(r_0)$. Como $p_1$ es aplicación recubridora, entonces tenemos que existe un único levantamiento $\widehat{p_2\circ \alpha}$ que comienza en $r_0$. Entonces tenemos que $\phi \circ \widehat{p_2\circ \alpha}$ es un arco en $R_2$ que comienza en $\phi(r_0)$. Es decir, $\alpha$ y $\phi\circ \widehat{p_2\circ \alpha}$ son dos arcos que empiezan en $\phi(r_0)$ y además
+        \begin{gather*}
+            p_2\circ(\phi \circ \widehat{p_2 \circ \alpha}) = p_1\circ(\widehat{p_2 \circ \alpha}) \overset{def}{=} p_2\circ \alpha
+        \end{gather*}
+        Por unicidad del levantamiento de $p_2$ tenemos que $\alpha = \phi \circ \widehat{p_2\circ \alpha}$ por lo que tenemos que 
+        \begin{gather*}
+            r_2 = \alpha(1) = \phi(\widehat{p_2\circ \alpha}(1))
+        \end{gather*}
+        Nos queda demostrar que todo punto de $R_2$ está regularmente recubierto.\\
+
+        Sea $r_2\in R_2$ fijado. Sabemos que $p_2(r_2)\in B$ y podemos elegir $U$ abierto arcoconexo en $B$ que contiene a $p_2(r_2)$ y que está regularmente recubierto por $p_1$ y por $p_2$. Por la definición de regularmente recubierto tenemos que 
+        \begin{gather*}
+            \left\{
+                \begin{array}{l}
+                    p_1^{-1}(U) = \bigcup\limits_{i\in I}A_i,\ \ \ A_i \text{ abiertos disjuntos}\\
+                    p_{1|_{A_i}} : A_i \to U \text{ homeomorfismo}
+                \end{array}  
+            \right.\\\\
+            \left\{
+                \begin{array}{l}
+                    p_2^{-1}(U) = \bigcup\limits_{j\in J}B_j,\ \ \ B_j \text{ abiertos disjuntos}\\
+                    p_{2|_{B_j}} : B_j \to U \text{ homeomorfismo}
+                \end{array}  
+            \right.
+        \end{gather*}
+        Observamos que
+        \begin{gather*}
+            \phi^{-1}\left(\bigcup\limits_{j\in J}B_j\right) = \phi^{-1}(p_2^{-1}(U)) = (p_2 \circ \phi)^{-1}(U) = p_1^{-1}(U) = \bigcup\limits_{i\in I} A_i
+        \end{gather*}
+        Alijamos un $A_{i_0}$ y veamos que $\phi(A_{i_0})$ está completamente contenida en algún $B_{j_0}$. Para ello, sabemos que $\phi(A_{i_0})$ es conexo y además
+        \begin{gather*}
+            \phi(A_{i_0}) \subseteq \bigcup\limits_{j\in J} B_j
+        \end{gather*}
+        Tenemos entonces que 
+        \begin{gather*}
+            \phi(A_{i_0}) = \phi(A_{i_0}) \cap \left(\bigcup\limits_{j\in J}B_j\right) = \bigcup\limits_{j\in J}(\phi(A_{i_0}) \cap B_j)
+        \end{gather*}
+        Como puedo escribir $\phi(A_{i_0})$ como unión de abiertos y $\phi(A_{i_0})$ es conexo tenemos que $\exists_1 j_0\in J$ tal que 
+        \begin{gather*}
+            \phi(A_{i_0}) \cap B_j = \emptyset \ \ \forall j \in J\setminus \{j_0\}
+        \end{gather*}
+        y podemos escribir 
+        \begin{gather*}
+            \phi(A_{i_0}) \subseteq B_{j_0}
+        \end{gather*}
+        Así, si tomamos $B_{j_0}$ como el abierto que contiene a $r_2$, entonces 
+        \begin{gather*}
+            \phi^{-1}(B_{j_0}) = \bigcup\limits_{i\in I'} A_i
+        \end{gather*}
+        con $I'\subseteq I$. Además, 
+        \begin{gather*}
+            \xymatrix{
+                \phi_{|A_i} :& A_i \ar[dr]_{ homeom. \equiv p_{1|A_i}} \ar[rr] && B_{j_0} \ar[dl]^{p_{2|B_{j_0}} \equiv homeom.}& \text{ homeomorfismo }\\
+                && U
+            }
+        \end{gather*}
+        por ser composición de dos homeomorfismos
+    \end{proof}
+\end{prop}
+
+\begin{coro}
+    Sean $(R_1, p_1)$, $(R_2, p_2)$ dos recubridores de un espacio topológico $B$, $b_0\in B$, $r_1\in p_1^{-1}(b_0)$ u $r_2\in p_2^{-1}(b_0)$. Si se verifica que
+    \begin{gather*}
+        p_{1*}(\pi_1(R_1, r_1)) \subseteq p_{2*}(\pi_1(R_2, r_2))
+    \end{gather*}
+    entonces existe una aplicación recubridora de $R_1$ en $R_2$ que lleva el punto $r_1$ en el punto $r_2$.
+\end{coro}
+
+\begin{definicion}
+    Decimos que $(R,p)$ es un \textbf{recubridor universal} de un espacio topológico $B$ si $(R,p)$ es un recubridor con $R$ simplemente conexo.
+\end{definicion}
+
+\begin{observacion}
+    Dos recubridores universales tienen que ser necesariamente isomorfos. Es decir, son salvo un homeomorfismo, el mismo. Esto se debe a que por ser $R$ simplemente conexo ambos tiene grupo fundamental trivial por lo que si hubiera dos tendrían que estar asociados al mismo subgrupo $H$ y sabemos que como mucho hay uno salvo isomorfismo. Por eso se suele decir \textbf{el} recubridor universal y no \textbf{un} recubridor universal.
+\end{observacion}
+
+\begin{observacion}
+    El adjetivo ``universal'' se debe a que si $(R_2, p_2)$ también recubre al espacio topológico base $B$, entonces el recubridor universal también recubre a $R_2$.
+    \begin{gather*}
+        \xymatrix{
+            R \ar[rr]^{\phi} \ar[dr]_{p} && R_2 \ar[dl]^{p_2}\\
+            & B
+        }
+    \end{gather*}
+\end{observacion}
